can like a video and added a video handler helper
